dashboard script update

--- a/src/server/mon/src/index.html
+++ b/src/server/mon/src/index.html
@@ -10,7 +10,7 @@
 
     <script src="scripts/cli.js"></script>
     <script src="scripts/api.js"></script>
-    <script src="scripts/script.js"></script>
+    <script src="scripts/dashboard.js"></script>
     <script src="scripts/winner.js"></script>
 
 </head>
