--- a/src/server/mon/src/index.html
+++ b/src/server/mon/src/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="styles/terminal.css">
     <link rel="stylesheet" href="styles/style.css">
 
+    <script src="scripts/settings.js"></script>
     <script src="scripts/cli.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/dashboard.js"></script>
