renamed winner to achievements

--- a/src/server/mon/src/index.html
+++ b/src/server/mon/src/index.html
@@ -12,7 +12,7 @@
     <script src="scripts/cli.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/dashboard.js"></script>
-    <script src="scripts/winner.js"></script>
+    <script src="scripts/achievements.js"></script>
 
 </head>
 
@@ -31,9 +31,9 @@
                 <img src="imgs/cli.png">
                 <div>CLI</div>
             </div>
-            <div id="winner-link" class="tablink" onclick="openTab('winner')">
-                <img src="imgs/winner.png">
-                <div>Winner</div>
+            <div id="achievements-link" class="tablink" onclick="openTab('achievements')">
+                <img src="imgs/achievements.png">
+                <div>Achievements</div>
             </div>
         </div>
         <div class="empty-space"> </div>
@@ -75,7 +75,7 @@
         <section id="cli" class="tab-container">
             <div class="terminal" id="terminal"> </div>
         </section>
-        <section id="winner" class="tab-container">
+        <section id="achievements" class="tab-container">
 
             <div class="placeholder">
                 Offline...
