--- a/src/server/mon/src/index.html
+++ b/src/server/mon/src/index.html
@@ -69,7 +69,7 @@
                 <div id="key_reads" class="w-container"></div>
             </div>
 
-
+            <div id="svg-tooltip" style="display: none;"></div>
 
         </section>
         <section id="cli" class="tab-container">
