--- a/src/server/mon/src/index.html
+++ b/src/server/mon/src/index.html
@@ -78,7 +78,7 @@
         <section id="achievements" class="tab-container">
 
             <div class="placeholder">
-                Offline...
+                This tab is available only online. Please check your internet connection and try again.
             </div>
 
         </section>
